--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -182,6 +182,7 @@
             android:hint="@string/InitialStep"
             android:digits="0123456789"
             android:inputType="numberDecimal"
+            android:maxLength="4"
             android:text="@string/InitialStepValue"
             tools:layout_editor_absoluteX="103dp"
             tools:layout_editor_absoluteY="291dp" />
@@ -204,6 +205,7 @@
             android:layout_height="wrap_content"
             android:hint="@string/n"
             android:digits="0123456789"
+            android:maxLength="4"
             android:inputType="numberDecimal"
             android:text="@string/_30"
             tools:layout_editor_absoluteX="103dp"
